# ismrmrdviewer

./: .gitignore  pyproject.toml  requirements.txt  setup.py
ismrmrdviewer/: __main__.py
ismrmrdviewer/ui/: FileWidget.py  MainWindow.py
ismrmrdviewer/viewer/: AcquisitionViewer.py  HeaderViewer.py  ImageViewer.py  WaveformViewer.py
